tests/base/invalid/SetUnion_CompileFail_1.whiley


void ::main(System.Console sys):
    y = 1.0234234
    xs = {1,2,3,4}
    xs = xs ∪ y
    sys.out.println(Any.toString(xs))
